// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deserialize when on the resource level with a resource array deserializes the links 1`] = `
[
  {
    "firstName": "Nico",
    "id": "123",
    "lastName": "Peters",
    "links": {
      "self": "http://some-url.com/123",
    },
  },
  {
    "firstName": "Karl",
    "id": "124",
    "lastName": "Maschmann",
    "links": {
      "self": "http://some-url.com/124",
    },
  },
]
`;

exports[`deserialize when on the resource level with a single resource deserializes the links 1`] = `
{
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
  "links": {
    "self": "http://some-url.com/123",
  },
}
`;

exports[`deserialize with a 1:1 relationship with a local id deserializes the json 1`] = `
{
  "company": {
    "lid": "666",
  },
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with a 1:1 relationship with a normal id deserializes the json 1`] = `
{
  "company": {
    "id": "666",
  },
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with a 1:1 relationship with includes with a local id deserializes the json 1`] = `
{
  "company": {
    "city": "Düsseldorf",
    "lid": "666",
    "name": "Compeon GmbH",
  },
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with a 1:1 relationship with includes with a normal id deserializes the json 1`] = `
{
  "company": {
    "city": "Düsseldorf",
    "id": "666",
    "name": "Compeon GmbH",
  },
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with a 1:n relationship with a local id deserializes the json 1`] = `
{
  "companies": [
    {
      "lid": "666",
    },
    {
      "id": "667",
    },
  ],
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with a 1:n relationship with a normal id deserializes the json 1`] = `
{
  "companies": [
    {
      "id": "666",
    },
    {
      "id": "667",
    },
  ],
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with a 1:n relationship with deeply nested relationships deserializes the json 1`] = `
{
  "company": {
    "id": "666",
    "tags": [
      {
        "id": "12",
      },
      {
        "id": "17",
      },
    ],
  },
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with a 1:n relationship with deeply nested relationships does not deserialize attributes directly included in a relation 1`] = `
{
  "company": {
    "id": "666",
    "name": "Compeon Gmbh",
    "tags": [
      {
        "id": "12",
      },
    ],
  },
  "id": "823",
  "lastName": "Peters",
  "name": "Nico",
}
`;

exports[`deserialize with a 1:n relationship with includes with a local id deserializes the json 1`] = `
{
  "companies": [
    {
      "city": "Düsseldorf",
      "lid": "666",
      "name": "Compeon GmbH",
    },
    {
      "city": "Düsseldorf",
      "id": "667",
      "name": "Compeon 4.0 GmbH",
    },
  ],
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with a 1:n relationship with includes with a normal id deserializes the json 1`] = `
{
  "companies": [
    {
      "city": "Düsseldorf",
      "id": "666",
      "name": "Compeon GmbH",
    },
    {
      "city": "Düsseldorf",
      "id": "667",
      "name": "Compeon 4.0 GmbH",
    },
  ],
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with a 1:n relationship with relationships inside an array of resources deserializes the json 1`] = `
[
  {
    "company": {
      "city": "Düsseldorf",
      "lid": "666",
      "name": "Compeon GmbH",
    },
    "firstName": "Nico",
    "id": "123",
    "lastName": "Peters",
  },
  {
    "company": {
      "city": "Düsseldorf",
      "lid": "666",
      "name": "Compeon GmbH",
    },
    "firstName": "Frank",
    "id": "234",
    "lastName": "Wüller",
    "tags": [
      {
        "id": "912",
        "name": "Banking",
      },
      {
        "id": "56",
        "name": "CEO",
      },
    ],
  },
]
`;

exports[`deserialize with a 1:n relationship with relationships with links deserializes the json 1`] = `
{
  "companies": [
    {
      "city": "Düsseldorf",
      "id": "666",
      "links": {
        "self": "htpp://ulf.de/companies/666",
      },
      "name": "Compeon GmbH",
    },
    {
      "city": "Düsseldorf",
      "id": "667",
      "name": "Compeon 4.0 GmbH",
    },
  ],
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with an array of resources with valid attributes deserializes the json 1`] = `
[
  {
    "firstName": "Nico",
    "id": "123",
    "lastName": "Peters",
  },
  {
    "firstName": "Frank",
    "id": "234",
    "lastName": "Wüller",
  },
]
`;

exports[`deserialize with empty relationships renders the empty relationships 1`] = `
{
  "colleagues": [],
  "company": null,
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with links when on the root level with a resource array deserializes the links 1`] = `
[
  {
    "firstName": "Nico",
    "id": "123",
    "lastName": "Peters",
    "rootLinks": {
      "dashboard": {
        "meta": {
          "title": "Dashboard",
        },
        "url": "http://example.com",
      },
    },
  },
  {
    "firstName": "Karl",
    "id": "124",
    "lastName": "Maschmann",
    "rootLinks": {
      "dashboard": {
        "meta": {
          "title": "Dashboard",
        },
        "url": "http://example.com",
      },
    },
  },
]
`;

exports[`deserialize with links when on the root level with a single resource deserializes the links 1`] = `
{
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
  "rootLinks": {
    "dashboard": {
      "meta": {
        "title": "Dashboard",
      },
      "url": "http://example.com",
    },
  },
}
`;

exports[`deserialize with relationships that have no identifier renders an empty relationship 1`] = `
{
  "company": null,
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with root and resource level links with a resource array deserializes the links 1`] = `
[
  {
    "firstName": "Nico",
    "id": "123",
    "lastName": "Peters",
    "links": {
      "self": "http://some-url.com/123",
    },
    "rootLinks": {
      "dashboard": {
        "meta": {
          "title": "Dashboard",
        },
        "url": "http://example.com",
      },
    },
  },
  {
    "firstName": "Karl",
    "id": "124",
    "lastName": "Maschmann",
    "links": {
      "self": "http://some-url.com/124",
    },
    "rootLinks": {
      "dashboard": {
        "meta": {
          "title": "Dashboard",
        },
        "url": "http://example.com",
      },
    },
  },
]
`;

exports[`deserialize with root and resource level links with a single resource deserializes the links 1`] = `
{
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
  "links": {
    "self": "http://some-url.com/123",
  },
  "rootLinks": {
    "dashboard": {
      "meta": {
        "title": "Dashboard",
      },
      "url": "http://example.com",
    },
  },
}
`;

exports[`deserialize with simple attributes with JSONAPI errors with an error array returns the errors 1`] = `
[
  {
    "id": "123",
    "links": {
      "about": "htpp://ulf.de",
    },
    "title": "Title",
  },
]
`;

exports[`deserialize with simple attributes with invalid attributes when data does not exist deserializes the json 1`] = `{}`;

exports[`deserialize with simple attributes with invalid attributes when data is empty deserializes the json 1`] = `{}`;

exports[`deserialize with simple attributes with valid attributes deserializes the json 1`] = `
{
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;
